# TMA4851_EIT

./: .gitignore  LICENSE  README.md  filter.py  utils.py
P300Testing/: P300_selection_SWLDA.py  P300_selection_peakpick.py  P300_testplot.py  linear_classifier.py  signal_functions.py
P300Testing/AvgMaxVisualization/: filters.py  main.py  max_classifier.py  preprocessing.py  utils.py
SSVEP/: io_utils.py  main.py  testing.py
SSVEP/BCISpellerData/: Results.xlsx  window.xlsx
SSVEP/BCISpellerData/BCISpellerScreenV1/BCISpellerScreenB/: dejittered-eeg.xdf  dejittered-iir-3order-bandstop50-bandpass10to27-eeg.xdf  dejittered-shifted43ms-decimate2-eeg-and-dejittered-unity-freq.xdf  dejittered-shifted43ms-decimate2-eeg-iir-and-dejittered-unity-freq.xdf  dejittered-unity-frequencies-Yformat.xdf
SSVEP/BCISpellerData/BCISpellerScreenV1/BCISpellerScreenE/: dejittered-eeg.xdf  dejittered-iir-3order-bandstop50-bandpass10to27-eeg.xdf  (+3 more)
SSVEP/BCISpellerData/ERPSpellerDataWorking/: dejittered-unity-frequencies-Yformat.xdf
SSVEP/BCISpellerData/ERPSpellerDataWorkingV2/: dejittered-iir-3order-bandstop50-bandpass10to27-eeg.xdf  dejittered-unity-frequencies-Yformat.xdf
SignalProcessing/: P300_ReceiveAndReturn.py  chess_loop.py  filter.py  io_utils.py  lsl_interactions.py  main.py  mock_eeg_lsl.py  testing.py
SignalProcessing/P300/: P300_ReceiveAndReturn.py  P300_selection_SWLDA.py  P300_selection_avgmax.py  P300_selection_peakpick.py  P300_test.py  readme.txt  signal_functions.py  test.py
SignalProcessing/SSVEP/: cca.py  io_utils.py  lsl_interactions.py  main.py  testing.py
blink/: CMakeLists.txt  blink.cpp  blink.ilk  blinkMain.cpp  blinkWindow.cpp  chessDisplay.cpp  helloworld.cpp  helloworld.ilk  readme.txt
chess_engine/: api_endpoint.py  backend_sketch.py  chess_engine.py  json.py  json_format.py  lsl_mock-sender.py  main.py
lsl/: read_xdf.py
lsl/SignalReceiving_python/: Marker_sender.py  Receive_signal.py  Signal_sender.py
lsl/lsl_mock_eeg/: CMakeLists.txt  main.cpp
lsl/lsl_p300/: CMakeLists.txt  README.md  main.cpp  main_work.cpp
lsl/lsl_send_signal_key_press/: main.cpp  main_work.cpp
lsl/lsl_ssvep/: CMakeLists.txt  main.cpp
signal_processing/: GammelP300PP.py  P300_selection_SWLDA.py  P300_selection_avgmax.py  P300_selection_peakpick.py  P300_selection_simple.py  P300_test.py  signal_functions.py
(+209 files in other folders)
